# CMakeList.txt : CMake project for 28-1-swim-100-meters, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("28-1-swim-100-meters")

# Add source to this project's executable.
add_subdirectory(src)

# TODO: Add tests and install targets if needed.
